# bulls-and-cows-game

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  handlers.py  logger.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 4b2fb8acae60_add_cascade_delete.py  8b232393cd29_init.py  91ed7b26bd9d_confirmation_reg.py
bulls_and_cows/: forms.py  game_core.py  routes.py  tasks.py  views.py
bulls_and_cows/templates/: _formhelpers.html  auth.html  base.html  exception.html  game.html  password_restore.html  rating.html  registration.html  resend_confirmation_token.html  reset_password.html  verify_email.html
bulls_and_cows/utils/: account.py  url.py
conf_files/nginx/: Dockerfile  default.conf
conf_files/nginx_unit/: conf.json  unit.list
models/: __init__.py  base.py  game.py  user.py
swagger/: routes.py  views.py
swagger/static/: swagger.yaml
tests/: conftest.py  utils.py
tests/bulls_and_cows_app/: test_account.py
tests/factories/: user_factories.py
tests/swagger_app/: test_views.py
utils/: collect.py  dramatiq_utils.py
